[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Customer Support Email Triage — OpenEnv environment for AI agent training"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Email Triage OpenEnv" }]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "numpy>=1.24",
]

[project.scripts]
server = "server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "tasks*"]
